--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@chakra-ui/react": "^3.15.1",
+        "@emotion/react": "^11.14.0",
         "@tailwindcss/vite": "^4.1.3",
+        "next-themes": "^0.4.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-icons": "^5.5.0",
         "react-router-dom": "^7.5.0",
         "tailwindcss": "^4.1.3"
     },
@@ -28,6 +32,7 @@
         "@vitejs/plugin-react": "^4.3.4",
         "onchange": "^7.1.0",
         "typescript": "~5.7.2",
-        "vite": "^6.2.0"
+        "vite": "^6.2.0",
+        "vite-tsconfig-paths": "^5.1.4"
     }
 }
