--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,15 +1,17 @@
 {
     "compilerOptions": {
         "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-        "target": "ES2020",
+        "target": "ESNext",
         "useDefineForClassFields": true,
         "lib": ["ES2020", "DOM", "DOM.Iterable"],
         "module": "ESNext",
         "skipLibCheck": true,
 
+        "baseUrl": "./",
+        
         /* Paths */
         "paths": {
-            "@": ["./src/*"],
+            "@/": ["./src/*"],
             "@assets": ["./src/assets/index"],
             "@components": ["./src/components/index"],
             "@pages": ["./src/pages/index"],
