--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dependencies": {
         "@chakra-ui/react": "^3.15.1",
         "@emotion/react": "^11.14.0",
+        "@splinetool/react-spline": "^4.0.0",
+        "@splinetool/runtime": "^1.9.82",
         "@tailwindcss/vite": "^4.1.3",
         "next-themes": "^0.4.6",
         "react": "^19.0.0",
