--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,4 @@
-{"projectId":"prj_FA1nGNbe3FPPPHYU9jb9WP45drjb","orgId":"team_2kTrGz2G6HDuz62VBCMem0ZY"}
+{
+    "projectId": "prj_FA1nGNbe3FPPPHYU9jb9WP45drjb",
+    "orgId": "team_2kTrGz2G6HDuz62VBCMem0ZY"
+}
