--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@splinetool/react-spline": "^4.0.0",
         "@splinetool/runtime": "^1.9.82",
         "@tailwindcss/vite": "^4.1.3",
+        "motion": "^12.7.4",
         "next-themes": "^0.4.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
