--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@splinetool/react-spline": "^4.0.0",
         "@splinetool/runtime": "^1.9.82",
         "@tailwindcss/vite": "^4.1.3",
+        "framer-motion": "^12.9.2",
         "motion": "^12.8.0",
         "next-themes": "^0.4.6",
         "react": "^19.0.0",
