--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@chakra-ui/react": "^3.15.1",
         "@emotion/react": "^11.14.0",
         "@fontsource/geist-sans": "^5.2.5",
+        "@radix-ui/react-icons": "^1.3.2",
         "@splinetool/react-spline": "^4.0.0",
         "@splinetool/runtime": "^1.9.82",
         "@tailwindcss/vite": "^4.1.3",
