--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,6 +14,7 @@
             "@/": ["./src/*"],
             "@assets": ["./src/assets/index"],
             "@components": ["./src/components/index"],
+            "@contexts": ["./src/contexts/index"],
             "@pages": ["./src/pages/index"],
             "@utils": ["./src/utils/index"]
         },
