update alias imports

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,7 +16,8 @@
             "@components": ["./src/components/index"],
             "@contexts": ["./src/contexts/index"],
             "@pages": ["./src/pages/index"],
-            "@utils": ["./src/utils/index"]
+            "@utils": ["./src/utils/index"],
+            "@locales": ["./src/locales/index"],
         },
 
         /* Bundler mode */
