--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -18,6 +18,7 @@
             "@pages": ["./src/pages/index"],
             "@utils": ["./src/utils/index"],
             "@locales": ["./src/locales/index"],
+            "@data": ["./src/data/index"], 
         },
 
         /* Bundler mode */
