--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@splinetool/runtime": "^1.9.82",
         "@tailwindcss/vite": "^4.1.3",
         "@types/react-scroll": "^1.8.10",
+        "detect-gpu": "^5.0.70",
         "framer-motion": "^12.9.2",
         "motion": "^12.8.0",
         "next-themes": "^0.4.6",
